--- a/html/sites/all/themes/wflc/sass/components/_node_header.scss
+++ b/html/sites/all/themes/wflc/sass/components/_node_header.scss
@@ -1,6 +1,8 @@
-.node {
-      width: 1170px;
+.node, .view-display-id-page {
+      width: 1230px;
+      max-width: 100%;
       margin: 0 auto;
+      padding: 0 30px;
 }
 
 .group-headercontent {
